# kokorox

./: AGENTS.md  README.md  export.md  justfile
.beads/: beads.base.jsonl  beads.left.meta.json  issues.jsonl
.pi/todos/: 9c805be0-e0e0-4a33-b706-0502b7752811.json  bb283e74-a57c-4366-824a-33f698b77e5a.json
.trx/: ISSUES.md  config.toml  issues.jsonl
.trx/crdt/: kokorox-6758.automerge
examples/: config.toml
history/: BENCH_SPEC.md  chinese-g2p-feasibility.md
koko/: Cargo.toml
koko/src/: config.rs  default_config.toml  main.rs
kokorox/: Cargo.toml  build.rs
kokorox-openai/: Cargo.toml
kokorox-openai/src/: lib.rs
kokorox-websocket/: Cargo.toml  README.md
kokorox-websocket/src/: lib.rs
kokorox/src/onn/: mod.rs  ort_base.rs  ort_koko.rs
kokorox/src/tts/: koko.rs  mod.rs  normalize.rs  phonemizer.rs  segmentation.rs  tokenize.rs  vocab.rs
kokorox/src/tts/chinese/: mod.rs  tone_sandhi.rs  transcription.rs
kokorox/src/utils/: hf_cache.rs  mod.rs
scripts/: install-koko.sh
voice-pca/: .gitignore  README.md  pyproject.toml
voice-pca/config/: label_studio_config.xml
voice-pca/scripts/: generate_audio.py  prepare_label_studio.py  voice_mixer.py
