[package]
name = "koko"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/WismutHansen/kokorox.git"
homepage = "https://github.com/WismutHansen/kokorox"
authors = ["Lucas Jin", "Tommy Falkowski"]
description = "Lightning fast text-to-speech CLI using the Kokoro model in rust"
license = "Apache-2.0"

[package.metadata.wix]
upgrade-guid = "336CE5A3-EB28-4A3A-A4C0-477194EBD0F6"
path-guid = "05092137-AFB8-436C-9F40-EE8B9866D6ED"
license = false
eula = false

[dependencies]
kokorox = { path = "../kokorox" }
kokorox-openai = { path = "../kokorox-openai" }
kokorox-websocket = { path = "../kokorox-websocket" }

clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "rt-multi-thread"] }
sentence_segmentation = "1.2.0"
rodio = "0.20.1"
ctrlc = "3.4.1"
regex = "1.10.3"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
shellexpand = "3.1"

[features]
default = []
cuda = ["kokorox/cuda"]
coreml = ["kokorox/coreml"]
