[package]
name = "kokorox-openai"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/WismutHansen/kokorox"
authors = ["Lucas Jin", "Tommy Falkowski"]
description = "Lightning fast text-to-speech with the Kokoro model in rust via an OpenAI-compatible server"
license = "Apache-2.0"

[dependencies]
kokorox = { path = "../kokorox" }

axum = { version = "0.7", features = ["http2"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
