[package]
name = "kokorox-websocket"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/WismutHansen/kokorox"
authors = ["Lucas Jin", "Tommy Falkowski"]
description = "WebSocket server for Kokorox TTS"
license = "Apache-2.0"

[dependencies]
kokorox = { path = "../kokorox" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
futures-util = "0.3"
tokio = { version = "1.0", features = ["io-util", "net", "rt", "macros"] }
tokio-tungstenite = "0.21"
uuid = { version = "1.0", features = ["v4"] }
